--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
         "start": "node backend/server",
         "server": "nodemon backend/server",
         "client": "npm start --prefix frontend",
-        "dev": "concurrently \"npm run server\" \"npm run client\" "
+        "dev": "concurrently \"npm run server\" \"npm run client\" ",
+        "data:import": "node backend/seeder",
+        "data:destroy": "node backend/seeder -d"
     },
     "author": "Linh Kieu",
     "license": "MIT",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.12.5",
+        "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
+        "express-async-handler": "^1.1.4",
+        "colors": "^1.4.0"
     },
     "devDependencies": {
         "concurrently": "^6.0.2",
