--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "express-async-handler": "^1.1.4",
-        "colors": "^1.4.0"
+        "colors": "^1.4.0",
+        "multer": "^1.4.2"
     },
     "devDependencies": {
         "concurrently": "^6.0.2",
